unpackaged/objects/Duplicate_Registration_Request__c.object
<CustomObject>
    <description>Duplicate Registration Request For Recall Process.</description>
    <fields>
        <fullName>Address2__c</fullName>
        <description>custom address field</description>
        <label>Address2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <description>custom address field</description>
        <label>Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseNumber__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ticket Number</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Duplicate Registration Request</relationshipLabel>
        <relationshipName>Duplicate_Registration_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>custom CIty field</description>
        <label>City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Email__c</fullName>
        <label>Customer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Date_Of_Purchase__c</fullName>
        <description>Date cm purchased item?</description>
        <inlineHelpText>this can be exact date or best guess by cm of purchase date</inlineHelpText>
        <label>Date Of Purchase</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>custom first name</description>
        <label>First Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Phone__c</fullName>
        <description>Captures the customer&apos;s primary contact number submitted through the recall registration form.</description>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>custom last name</description>
        <label>Last Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <description>what is the model # of the unit?</description>
        <inlineHelpText>located on silver rating label on unit or stamped on the bottom of unit</inlineHelpText>
        <label>Model #</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>custom state field</description>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AB</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BC</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>CZ</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>GU</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MB</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Visitor_Fingerprint_Id__c</fullName>
        <description>Used to store visitor id generated from fingerprint.com</description>
        <label>Visitor Fingerprint Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Phone__c</fullName>
        <label>Web Phone</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZipCode__c</fullName>
        <description>custom zip code</description>
        <label>ZipCode</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>Duplicate Registration Request</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DRR-{00000}</displayFormat>
        <label>Duplicate Registration Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Duplicate Registration Request</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>